@@ -79,6 +79,7 @@ const uint16_t		MsgGMUpdate = 0x676d;			// 'gm'
 const uint16_t		MsgGetWorld = 0x6777;			// 'gw'
 const uint16_t		MsgGameSettings = 0x6773;		// 'gs'
 const uint16_t		MsgGameTime = 0x6774;			// 'gt'
+const uint16_t          MsgHandicap = 0x6863;                   // 'hc'
 const uint16_t		MsgKilled = 0x6b6c;			// 'kl'
 const uint16_t		MsgKrbPrincipal = 0x6b70;		// 'kp'
 const uint16_t		MsgKrbTicket    = 0x6b74;		// 'kt'
