@@ -172,6 +172,7 @@ public:
   virtual void	setFlag(FlagType*);
   virtual void	changeScore(short deltaWins, short deltaLosses, short deltaTeamKills);
   void		changeLocalScore(short deltaWins, short deltaLosses, short deltaTeamKills);
+  void          setHandicap(float handicap);
   void		setStatus(short);
   void		setExplode(const TimeKeeper&);
   void		setTeleport(const TimeKeeper&, short from, short to);
@@ -209,6 +210,9 @@ protected:
 
   // pause message
   bool pauseMessageState;
+
+  std::vector<ShotPath*> shots;
+  float                  handicap;
 
 private:
   // return true if the shot had to be terminated or false if it
